--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,12 @@
 yarnPath: .yarn/releases/yarn-3.2.1.cjs
 nmHoistingLimits: "workspaces"
 nodeLinker: "pnp"
+packageExtensions:
+  # jest-config needs tsnode when using a jest.config.ts file https://github.com/facebook/jest/issues/11751
+  "jest-config@*":
+    dependencies:
+      "ts-node": "*"
+  # storybook dep @storybook/addon-docs requires peer deps babel-loader ->@babel/core
+  "@storybook/addon-docs@*":
+    dependencies:
+      "@babel/core": "*"
