--- a/packages/premail-components/package.json
+++ b/packages/premail-components/package.json
@@ -19,10 +19,13 @@
     "@storybook/testing-library": "^0.0.13",
     "@svgr/webpack": "^6.2.1",
     "@types/jest": "^28.1.3",
+    "@types/node": "^18.0.0",
+    "@types/prettier": "^2.6.3",
     "@types/react": "^18.0.14",
     "@types/react-test-renderer": "^18.0.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "css-modules-typescript-loader": "^4.0.1",
     "jest": "^28.1.1",
     "mini-css-extract-plugin": "^2.6.1",
     "prettier": "^2.7.1",
@@ -35,7 +38,7 @@
     "ts-jest": "^28.0.5",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.8.1",
-    "typescript": "^4.7.4",
+    "typescript": "4.7.4",
     "typescript-plugin-css-modules": "^3.4.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.73.0",
@@ -43,7 +46,10 @@
   },
   "scripts": {
     "test": "jest",
-    "build": "rimraf lib && webpack",
+    "build": "yarn clean && webpack",
+    "clean": "rimraf lib",
+    "generate:palettes": "rimraf src/themes/generated-palettes && ts-node ./scripts/generatePalettes.ts",
+    "generate": "yarn generate:palettes",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
