:white_check_mark: test: Add unit testing for Themeing components.
Added unit tests for StaticTheme and DynamicTheme, refactored into smaller tests and files.
This closes #46

--- a/packages/premail-components/.gitignore
+++ b/packages/premail-components/.gitignore
@@ -1,2 +1,6 @@
+# ignore webpack output
 lib
+# ignore generated color palettes
 src/theme/generated-palettes
+# ignore test coverage report
+coverage
