--- a/packages/premail-components/package.json
+++ b/packages/premail-components/package.json
@@ -22,11 +22,17 @@
     "@types/node": "^18.0.0",
     "@types/prettier": "^2.6.3",
     "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "@types/react-test-renderer": "^18.0.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "css-modules-typescript-loader": "^4.0.1",
+    "dotenv": "^16.0.1",
+    "dotenv-cli": "^5.1.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.2",
+    "jest-mock-extended": "^2.0.6",
     "mini-css-extract-plugin": "^2.6.1",
     "prettier": "^2.7.1",
     "react-test-renderer": "^18.2.0",
@@ -45,7 +51,7 @@
     "webpack-cli": "^4.10.0"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --collectCoverage",
     "build": "yarn clean && webpack",
     "clean": "rimraf lib",
     "generate:palettes": "rimraf src/themes/generated-palettes && ts-node ./scripts/generatePalettes.ts",
