:sparkles: feat: implement @premail/icons and @premail/logger packages
* Create icons package to encapsulate generation, dev and testing of components from icon packs.
* Create logger package to encapsulate logging logic.
* Logger is declared as esm package due to chalk as dependency
This closes #49
This closes #52

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -6,7 +6,11 @@ packageExtensions:
   "jest-config@*":
     dependencies:
       "ts-node": "*"
-  # storybook dep @storybook/addon-docs requires peer deps babel-loader ->@babel/core
+  # storybook dep @storybook/addon-docs requires peer deps babel-loader -> @babel/core
   "@storybook/addon-docs@*":
     dependencies:
       "@babel/core": "*"
+  chalk@5.0.1:
+    dependencies:
+      "#ansi-styles": npm:ansi-styles@6.1.0
+      "#supports-color": npm:supports-color@9.2.2
