:bug: fix: devtool in @premail/icons webpack config, make @premail/logger cjs
* Fix invaloid devtool param in webpack.config
* remove chalk dependency and make premail logger cjs module
* regenerate yarn lock

This closes #54
This closes #55

--- a/packages/premail-icons/tsconfig.webpack.json
+++ b/packages/premail-icons/tsconfig.webpack.json
@@ -1,11 +1,12 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["types.d.ts", "src"],
+  "include": ["globals.d.ts", "src"],
   "exclude": [
     "scripts",
     "src/**/*.test.tsx",
     "src/**/*.test.ts",
     "src/**/*.storybook.tsx",
-    "src/**/*.stories.tsx"
+    "src/**/*.stories.tsx",
+    "src/__mocks__"
   ]
 }
