--- a/packages/premail-logger/package.json
+++ b/packages/premail-logger/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@premail/logger",
   "packageManager": "yarn@3.2.1",
-  "type": "module",
   "devDependencies": {
     "rimraf": "^3.0.2",
     "typescript": "^4.7.4",
     "winston": "^3.8.1"
   },
   "dependencies": {
-    "chalk": "^5.0.1"
+    "colors": "^1.4.0"
   },
   "scripts": {
     "build": "rimraf build && tsc"
