:sparkles: feat: create @premail/state state management library.
* implement a state management library based on observables. This closes #41

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "packages": [
       "packages/premail-components",
       "packages/premail-icons",
-      "packages/premail-logger"
+      "packages/premail-logger",
+      "packages/premail-state"
     ]
   },
   "devDependencies": {
