--- a/packages/premail-components/package.json
+++ b/packages/premail-components/package.json
@@ -22,7 +22,7 @@
     "@types/node": "^18.0.0",
     "@types/prettier": "^2.6.3",
     "@types/react": "^18.0.14",
-    "@types/react-dom": "18.0.5",
+    "@types/react-dom": "18.0.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
@@ -60,6 +60,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@premail/icons": "workspace:^",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
