--- a/packages/premail-components/package.json
+++ b/packages/premail-components/package.json
@@ -2,6 +2,10 @@
   "name": "@premail/components",
   "packageManager": "yarn@3.2.1",
   "main": "./lib/index.js",
+  "peerDependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@mdx-js/react": "^1.6.22",
@@ -35,7 +39,9 @@
     "jest-mock-extended": "^2.0.6",
     "mini-css-extract-plugin": "^2.6.1",
     "prettier": "^2.7.1",
-    "react-test-renderer": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-test-renderer": "18.2.0",
     "rimraf": "^3.0.2",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.1",
@@ -60,8 +66,6 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@premail/icons": "workspace:^",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@premail/icons": "workspace:^"
   }
 }
