:recycle: refactor: Refactor Card themeing variables to use palette colors.
* Replace old variables with palette variables
* Fix Card import in button story
* Create Card storybook file.
* Extend generatePalette to generate theme variables.

This closes #67.
This closes #65
This closes #64
This closes #71
This closes #70

--- a/packages/premail-components/.gitignore
+++ b/packages/premail-components/.gitignore
@@ -1,6 +1,6 @@
 # ignore webpack output
 lib
-# ignore generated color palettes
-src/theme/generated-palettes
+# ignore generated theme variables
+src/theme/generated-theme-variables
 # ignore test coverage report
 coverage
