:sparkles: feat: Implement Email editor toolbar, toolbar tab switcher.
* Implement Email editor toolbar.
* Implement Email editor toolbar tab switcher.
* Implement state instance manager and refactor state utilities.

This closes #6.
This closes #58.
This closes #11.

--- a/packages/premail-components/package.json
+++ b/packages/premail-components/package.json
@@ -68,6 +68,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@premail/icons": "workspace:^"
+    "@premail/icons": "workspace:^",
+    "@premail/state": "workspace:^"
   }
 }
