--- a/packages/premail-components/package.json
+++ b/packages/premail-components/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^18.0.0",
     "@types/prettier": "^2.6.3",
     "@types/react": "^18.0.14",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "18.0.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-loader": "^8.2.5",
@@ -69,6 +70,7 @@
   },
   "dependencies": {
     "@premail/icons": "workspace:^",
-    "@premail/state": "workspace:^"
+    "@premail/state": "workspace:^",
+    "react-color": "^2.19.3"
   }
 }
