:wrench:chore: Update to yarn 3.4.1 * Updates local yarn release lock file yarnrc and package.json This closes #94

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,12 +1,13 @@
-yarnPath: .yarn/releases/yarn-3.2.1.cjs
-nmHoistingLimits: "workspaces"
-nodeLinker: "pnp"
+nmHoistingLimits: workspaces
+
+nodeLinker: pnp
+
 packageExtensions:
-  # jest-config needs tsnode when using a jest.config.ts file https://github.com/facebook/jest/issues/11751
-  "jest-config@*":
-    dependencies:
-      "ts-node": "*"
-  # storybook dep @storybook/addon-docs requires peer deps babel-loader -> @babel/core
   "@storybook/addon-docs@*":
     dependencies:
       "@babel/core": "*"
+  jest-config@*:
+    dependencies:
+      ts-node: "*"
+
+yarnPath: .yarn/releases/yarn-3.4.1.cjs
